# aios-desktop-app

./: README.md  free openai, anthropic apikeys.rar  readme.txt
aios-backend-server/: .env.example  .gitignore  Dockerfile  docker-compose.yml  firebase.indexes.json  firestore.rules  package.json  postman-collection.json  tsconfig.json
aios-backend-server/migrations/: 001_initial_schema.sql
aios-backend-server/scripts/: deploy.sh
aios-backend-server/src/: app.ts  server.ts
aios-backend-server/supabase/: config.toml
aios-desktop-app/: .env.example  .gitignore  README.md  components.json  dev-app-update.yml  electron-builder.yml  electron.vite.config.1744016763768.mjs  electron.vite.config.ts  mcp.json  package-lock.json  package.json  start-app.bat  start-app.ps1  start-app.sh  tsconfig.node.json  tsconfig.web.json
aios-desktop-app/docs/: frontend_langgraph_interaction.md  mcp_extension_plan.md  refactor_plan.md  stt_implementation.md  websocket_mcp_integration.md
aios-desktop-app/resources/: .accounts.json
aios-langgraph-server/: .cursorrules  .env.example  .gitignore  README.md  apikeys.rar  docker-compose.yml  langgraph.json  pyproject.toml
aios-langgraph-server/docs/: ARCHITECTURE.md  client_documentation.md  stt_frontend_guide.md
aios-langgraph-server/src/react_agent/: configuration.py  executors.py  graph.py  prompts.py  state.py  utils.py  websocket_tool_node.py
aios-langgraph-server/src/react_agent/web/: __init__.py  connection.py  server.py
aios-langgraph-server/src/react_agent/web/stt/: config.py  router.py
aios-langgraph-server/src/react_agent/web/stt/providers/: base.py  deepgram.py
aios-website-front/: .gitignore  README.md  next.config.ts  package-lock.json  package.json  tailwind.config.js  tailwind.config.ts
docs/: pipedream-integration-plan.md
(+198 files in other folders)
